# monroe-calculator-information

./: README.md
2890/: cartridge pinout.txt
2890/dumps/: abc  dump_strings.tcl  dump_strings.tcl~  hex_adjust.tcl  inverted_hex.txt  monroe-2890-all-rom-dump.txt  monroe-2890-all-rom-dump.txt~  monroe-2890-rom-dump-u17.txt  monroe_2890_cartridge.txt  monroe_2890_cartridge.txt.a.bin.lst  monroe_2890_cartridge_chopped.txt  monroe_2890_cartridge_chopped.txt~  monroe_2890_cartridge_rom0.txt  monroe_2890_cartridge_rom0.txt~  monroe_2890_cartridge_rom1.txt  monroe_2890_disasm.lst  monroe_2890_disasm2.lst  monroe_2890_disasm2.lst~  monroe_2890_rom_dump_1.txt  pps4dis  pps4dis.c  pps4dis.c~  rom-reader-tool.tcl  rom-reader-tool.tcl~
2890/firmware/2890-cartridge_gadget/: #acorn_system_1_gadget.c#  #experimental_schools_computer.c#  2890-cartridge-gadget.c  2890-cartridge-gadget.c~  CMakeLists.txt  CMakeLists.txt~  acorn_system_1_gadget.c~  epson_hx20_cartridge.c~  esc.h~  esc_desktop_display.c  esc_desktop_display.h  esc_fsms.c  esc_fsms.c~  esc_fsms.h  esc_fsms.h~  extracode.c  extracode.c~  extracode.h  extracode.h~  extracode_basic.c  extracode_basic.c~  extracode_fp.c  extracode_fp.c~  extracode_random.c  extracode_random.c~  fsms.c  fsms.c~  fsms.h  fsms.h~  hw_config.c  match_token.c  match_token.c~  match_token.h  menu.c  menu.c~  menu.h  menu.h~  oled.c  oled.h  oled.h~  (+6 more)
2890/firmware/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/: abc
2890/pcbs/douible_cartridge_adapter/doublke_cartridge_adapter/: doublke_cartridge_adapter.kicad_pcb  doublke_cartridge_adapter.kicad_prl  doublke_cartridge_adapter.kicad_pro  doublke_cartridge_adapter.kicad_sch  fp-lib-table
2890/pcbs/douible_cartridge_adapter/doublke_cartridge_adapter/fab1/: doublke_cartridge_adapter-B_Cu.gbr  doublke_cartridge_adapter-B_Mask.gbr  doublke_cartridge_adapter-B_Paste.gbr  doublke_cartridge_adapter-B_Silkscreen.gbr  doublke_cartridge_adapter-Edge_Cuts.gbr  doublke_cartridge_adapter-F_Cu.gbr  doublke_cartridge_adapter-F_Mask.gbr  doublke_cartridge_adapter-F_Paste.gbr  doublke_cartridge_adapter-F_Silkscreen.gbr  doublke_cartridge_adapter-NPTH.drl  doublke_cartridge_adapter-PTH.drl  doublke_cartridge_adapter-job.gbrjob
2890/pcbs/pico_cartridge/pico_cartridge_2890/: #auto_saved_files#  fp-info-cache  fp-lib-table  pico_cartridge_2890.kicad_pcb  pico_cartridge_2890.kicad_prl  pico_cartridge_2890.kicad_pro  pico_cartridge_2890.kicad_sch  ~pico_cartridge_2890.kicad_pcb.lck
2890/pcbs/pico_cartridge/pico_cartridge_2890/fab1/: errata-monroe-2890-pico-cartridge.txt  pico_cartridge_2890-B_Cu.gbr  pico_cartridge_2890-B_Mask.gbr  pico_cartridge_2890-B_Paste.gbr  pico_cartridge_2890-B_Silkscreen.gbr  pico_cartridge_2890-Edge_Cuts.gbr  pico_cartridge_2890-F_Cu.gbr  pico_cartridge_2890-F_Mask.gbr  pico_cartridge_2890-F_Paste.gbr  pico_cartridge_2890-F_Silkscreen.gbr  pico_cartridge_2890-NPTH.drl  pico_cartridge_2890-PTH.drl  pico_cartridge_2890-job.gbrjob
2890/pcbs/pico_cartridge/pico_cartridge_2890/fab2/: pico_cartridge_2890-B_Cu.gbr  pico_cartridge_2890-B_Mask.gbr  pico_cartridge_2890-B_Paste.gbr  pico_cartridge_2890-B_Silkscreen.gbr  (+8 more)
classmate-88/: test_modes.txt
(+2 files in other folders)
